# black_hole

./: .gitignore  README.md  blackhole.py  blackhole3d.py  blackhole_basic.py  test.py
Gravity_Sim/src/: black_hole.cpp  gravity_sim.cpp  ray_tracing2.cpp
c++/: 2D_lensing  2D_lensing.cpp  CMakeLists.txt  Makefile  black_hole  black_hole.cpp  ray_tracing
c++/Gravity_Sim/src/: black_hole.cu  cuda_test.cu  gravity_sim_1.cpp  holding_file.cpp  working_raytracing.cpp
c++/shaders/: geodesic.comp
